# ainativelang

./: .agent-install.json  .gitattributes  .gitignore  .pre-commit-config.yaml  ADAPTER_CATALOG.md  ADAPTER_IMPLEMENTATION_STATUS.md  ADAPTER_REGISTRY.json  AGENTS.md  AINL_COST_SAVINGS_REPORT.md  AINL_INFRASTRUCTURE_DIAGNOSTIC.md  AINL_OPERATIONAL_DEPLOYMENT_REPORT.md  AINL_SPEC.md  AI_AGENT_QUICKSTART_OPENCLAW.md  AI_CONSULTANT_REPORT_APOLLO.md  BENCHMARK.md  CITATION.cff  COMMERCIAL.md  CONSULTANT_REPORTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  EMAIL_ADAPTER_COMPLETE.md  EMAIL_ADAPTER_IMPLEMENTATION.md  GROWTH-PLAN.md  HOW_AINL_SAVES_MONEY.md  LATE_NIGHT_CONVO_WITH_AI.md  Makefile  OPENCLAW_AI_AGENT.md  PRIOR_ART.md  README.md  README_EXTENSION.md  SECURITY.md  SEMANTICS.md  STATUS.yaml  STRICT_MODE_CONVERSION_PLAN.md  WHAT_IS_AINL.md  WHITEPAPERDRAFT.md  ainl.schema.json  ainl_graphy_memory.py  ainl_preprocess.py  benchmark_tokens.py  (+22 more)
.baselinestore/: baseline_2026-03-31-060042Z.json  baseline_2026-04-05T06-00-14-868572Z.json  baseline_2026-04-06T06-00-23-811315Z.json  baseline_2026-04-09T06-00-44-850Z.json  comparison_manifest.json
.cache/: digest.json
.github/: dependabot.yml  pull_request_template.md
adapters/: __init__.py  agent.py  armaraos_defaults.py  armaraos_integration.py  armaraos_memory.py  armaraos_token_tracker.py  audit_trail.py  blockchain_base.py  browser.py  code_context.py  core.py  crm.py  crm_db.py  email.py  embedding_memory.py  fallback.py  fanout.py  github.py  langchain_tool.py  llm_query.py  llm_runtime.py  local_cache.py  openclaw_defaults.py  openclaw_integration.py  openclaw_memory.py  openclaw_token_tracker.py  ptc_runner.py  registry.py  solana.py  std_ext.py  tiktok.py  tool_registry.py  vector_memory.py
agent_reports/: 2026-03-27-ainl-cost-savings.md  AI_CONSULTANT_REPORT_APOLLO.md  AI_CONSULTANT_REPORT_TEMPLATE.md  CONSULTANT_REPORTS.md  Grok-analysis-as-of-March-25-2026–v1-2-8-Token-Cost-Savings.md  Grok-xAI-analysis-as-of-March-25-2026.md  NEWLY_IMPLEMENTED_AINL_PROGRAMS_2026-03-14.md  README.md  ainl-king-openclaw-2026-03-19.md  grok-xai-review-2026-03-19.md  plushifier-openclaw-2026-03-18.md
apollo-x-bot/: .env.example  .gitignore  OPENCLAW_DEPLOY.md  PROD_RESTART_CHECKLIST.md  README.md  ainl-poll.sh  ainl-x-promoter.ainl  api-cost-monitor.ainl  discover-poll.sh  gateway_server.py  monitor-poll.sh  openclaw-poll.sh  run-with-gateway.sh  start-gateway.sh  test_daily_post_content.py  thread-poll.sh
armaraos/: __init__.py  env.py
baselines/: baseline_20260401_020036.json  baseline_20260407_060016.json
cache/: digest.json  digest_cache.json  digest_last_digest_ts.json  digest_last_mention_count.json  digest_last_tiktok_count.json  digest_state.json  token_budget.json
cli/: main.py
constraints/: py313-mcp.txt
corpus/: reverse_prompt_fixtures.json  strict_valid_family_index.json
demo/: .ainl-library-skip  a.ainl  ainl_graph_memory_demo.py  ainl_wrapper_evolver.ainl  api_quota.lang  canary_sampler.lang  cron_cost_auditor.lang  duplicate_detection.lang  heartbeat_consolidator.lang  infrastructure_watchdog.lang  invoice_aging.lang  lead_ai_openspace.ainl  lead_ai_openspace_fixed.ainl  lead_ai_openspace_test.ainl  lead_quality_audit.lang  lead_score_drift.lang  memory_distill_example.lang  memory_prune.lang  meta_monitor.lang  monitor_system.lang  pipeline_health.lang  procedural_roundtrip_demo.py  revenue_forecast.lang  session_budget_enforcer.lang  session_continuity.lang  test.ainl  test_mcp_log.ainl  test_openspace_http.ainl  test_openspace_mcp.ainl  test_openspace_mcp_api.ainl  test_openspace_mcp_comment.ainl  test_openspace_mcp_core.ainl  test_openspace_mcp_fixed.ainl  test_openspace_mcp_fixed2.ainl  test_openspace_mcp_minimal.ainl  test_openspace_mcp_new.ainl  test_openspace_mcp_simple.ainl  test_openspace_mcp_test.ainl  test_simple.ainl  test_workflow.ainl  (+6 more)
design/: adapter_maturity_design.md  adapter_monitor_design.md  critical_gaps_implementation_design.md
docs/: ADAPTER_DEVELOPER_GUIDE.md  ADAPTER_REGISTRY.md  AGENT_COORDINATION_CONTRACT.md  AGENT_GUIDE_INDEX.md  AINL_CORE_AND_MODULES.md  AINL_EXTENSIONS.md  AINL_GRAPH_VOCABULARY.md  AINL_SPEC.md  AINL_V0_9_PROFILE.md  AI_AGENT_CONTINUITY.md  ARMARAOS_INTEGRATION.md  AUDIENCE_GUIDE.md  AUTONOMOUS_OPS_MONITORS.md  AUTONOMOUS_OPS_PLAYBOOK.md  BOT_ONBOARDING.md  CAPABILITY_REGISTRY.md  CHANGELOG.md  CLAIMS_AND_EVIDENCE.md  COMPILE_ONCE_RUN_MANY.md  CONFORMANCE.md  CONTEXT_FRESHNESS.md  CONTRIBUTING.md  CONTRIBUTING_AI_AGENTS.md  COST_ESTIMATOR.md  CRON_ORCHESTRATION.md  DOCS_INDEX.md  DOCS_MAINTENANCE.md  ECOSYSTEM_OPENCLAW.md  EMBEDDING_RESEARCH_LOOPS.md  EMIT_TARGETS.md  EXAMPLE_SUPPORT_MATRIX.md  EXTERNAL_EXECUTOR_BRIDGE_INTEGRATION.md  FIXES_APPLIED.md  GITHUB_RELEASE_CHECKLIST.md  GLOSSARY.md  HERMES_INTEGRATION.md  HOST_MCP_INTEGRATIONS.md  HYBRID_GUIDE.md  INSTALL.md  INTEGRATION_STORY.md  (+41 more)
env/: openclaw-workspace-ainl.env.example
examples/: EMAIL_ADAPTER_README.md  README.md  api_example.ainl  api_only.lang  armaraos_agent.ainlbundle  bad_include.ainl  blog.lang  code_context_demo.ainl  code_context_example.ainl  ecom.lang  email_attachment_example.ainl  email_autoresponder.ainl  email_draft_example.ainl  email_html_example.ainl  email_read_example.ainl  email_reply_example.ainl  email_send_example.ainl  embedding_memory_example.ainl  github_example.ainl  hello.ainl  http_get_minimal.ainl  hybrid_order_processor.ainl  hyperspace_demo.ainl  internal_tool.lang  langchain_tool_example.ainl  llm_example.ainl  openclaw_full_unification.ainl  persona_demo.ainl  prediction_market_demo.ainl  price_monitor.ainl  ptc_integration_example.ainl  solana_demo.ainl  test_X_sub.ainl  test_adapters_full.ainl  test_if_var.ainl  test_mul.ainl  test_nested.ainl  test_phase2_common_modules.ainl  test_phase2_common_modules.trajectory.jsonl  ticketing.lang  (+1 more)
hermes/: __init__.py  hermes_adapter.py  hermes_mcp_server.py  hermes_skill_importer.py
intelligence/: __init__.py  auto_tune_ainl_caps.lang  context_firewall_audit.py  drift_detector.py  infrastructure_watchdog.lang  (+11 more)
(+1016 files in other folders)
