[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainl-lang"
version = "1.2.0"
description = "AINL compiler, runtime, validator, and tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
  { name = "Steven Hooley" },
]
keywords = [
  "ainl",
  "ai-native-language",
  "compiler",
  "graph-ir",
  "constrained-decoding",
]

[project.urls]
Homepage = "https://ainativelang.com"
Repository = "https://github.com/sbhooley/ainativelang"
Documentation = "https://github.com/sbhooley/ainativelang"
InitiatorX = "https://x.com/sbhooley"
InitiatorLinkedIn = "https://linkedin.com/in/sbhooley"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "hypothesis>=6.0.0", "httpx>=0.27.0", "pre-commit>=3.7.0", "rich>=13.0.0", "pytest-xdist", "syrupy", "playwright>=1.46.0"]
web = ["fastapi", "uvicorn[standard]"]
mcp = ["mcp[cli]>=1.0.0"]
openclaw = ["requests>=2.28.0"]

[project.scripts]
ainl-validate = "scripts.validate_ainl:main"
ainl-validator-web = "scripts.validator_app:main"
ainl-generate-dataset = "scripts.generate_synthetic_dataset:main"
ainl-compat-report = "scripts.compat_report:main"
ainl-tool-api = "scripts.tool_api:main"
ainl-ollama-eval = "scripts.eval_ollama:main"
ainl-ollama-benchmark = "scripts.benchmark_ollama:main"
ainl-validate-examples = "scripts.validate_examples:main"
ainl-check-viability = "scripts.viability:main"
ainl-playbook-retrieve = "scripts.retrieval_playbook:main"
ainl = "cli.main:main"
ainl-test-runtime = "scripts.run_runtime_tests:main"
ainl-runner-service = "scripts.runtime_runner_service:main"
ainl-test-profiles = "scripts.run_test_profiles:main"
ainl-check-docs = "scripts.check_docs_contracts:main"
ainl-mcp = "scripts.ainl_mcp_server:main"
ainl-visualize = "scripts.visualize_ainl:main"

[tool.setuptools]
py-modules = [
  "compiler_v2",
  "compiler_diagnostics",
  "runtime",
  "grammar_constraint",
]

[tool.setuptools.packages.find]
include = ["scripts*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration and not emits and not lsp'"
norecursedirs = [".git", ".venv", "tests/emits", "scripts"]
markers = [
  "core: stable core compiler/runtime/tooling tests",
  "integration: slower or external integration checks",
  "emits: emitter artifact checks",
  "lsp: language server checks"
]
