[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainativelang"
version = "1.8.0"
description = "AINL compiler, runtime, validator, and tooling"
readme = "README.md"
requires-python = ">=3.10"
# LLM adapters import these at module load (adapters/__init__.py → adapters.llm.*).
dependencies = [
  "httpx>=0.27.0",
  "requests>=2.28.0",
  "PyYAML>=6.0",
]
authors = [
  { name = "Steven Hooley" },
]
keywords = [
  "ainl",
  "ai-native-language",
  "compiler",
  "graph-ir",
  "constrained-decoding",
]

[project.urls]
Homepage = "https://ainativelang.com"
Repository = "https://github.com/sbhooley/ainativelang"
Documentation = "https://github.com/sbhooley/ainativelang"
InitiatorX = "https://x.com/sbhooley"
InitiatorLinkedIn = "https://linkedin.com/in/sbhooley"

[project.optional-dependencies]
benchmark = [
  "psutil>=5.9.0",
  "tiktoken>=0.7.0",
  # Handwritten baseline runtime (--compare-baselines): pure_async + LangGraph shims
  "aiohttp>=3.9.0",
  "langgraph>=0.2.0",
  # Temporal worker types in emitted hybrid modules (optional until you run a worker)
  "temporalio>=1.8.0",
]
# LangGraph / Temporal / HTTP helpers for hybrid examples and baseline comparisons.
interop = [
  "aiohttp>=3.9.0",
  "langgraph>=0.2.0",
  "temporalio>=1.8.0",
]
dev = [
  "pytest>=7.0.0",
  "hypothesis>=6.0.0",
  "httpx>=0.27.0",
  "pre-commit>=3.7.0",
  "rich>=13.0.0",
  "pytest-xdist",
  "syrupy",
  "responses>=0.25.0",
  "playwright>=1.46.0",
  "fastapi",
  "uvicorn[standard]",
  "requests>=2.28.0",
  "tiktoken>=0.7.0",
  "Flask>=2.3.3",
  "prometheus-client>=0.19.0",
]
web = ["fastapi", "uvicorn[standard]"]
mcp = ["mcp[cli]>=1.0.0"]
openclaw = ["requests>=2.28.0", "mcp[cli]>=1.0.0"]
postgres = ["psycopg[binary]>=3.2.0", "psycopg-pool>=3.2.0"]
mysql = ["pymysql>=1.1.0", "aiomysql>=0.2.0"]
redis = ["redis>=5.0.0"]
dynamodb = ["boto3>=1.34.0"]
airtable = ["pyairtable>=2.0.0", "httpx>=0.27.0"]
supabase = ["supabase>=2.0.0", "httpx>=0.27.0"]
# Optional: Anthropic API for ainl-ollama-benchmark --cloud-model
anthropic = ["anthropic>=0.40.0"]
# Solana JSON-RPC (adapters/solana.py); SPL helpers may require additional spl.token bindings
solana = ["solana>=0.34.0", "solders>=0.21.0"]

[project.scripts]
ainl-validate = "scripts.validate_ainl:main"
ainl-validator-web = "scripts.validator_app:main"
ainl-generate-dataset = "scripts.generate_synthetic_dataset:main"
ainl-compat-report = "scripts.compat_report:main"
ainl-tool-api = "scripts.tool_api:main"
ainl-ollama-eval = "scripts.eval_ollama:main"
ainl-ollama-benchmark = "scripts.benchmark_ollama:main"
ainl-validate-examples = "scripts.validate_examples:main"
ainl-check-viability = "scripts.viability:main"
ainl-playbook-retrieve = "scripts.retrieval_playbook:main"
ainl = "cli.main:main"
ainl-test-runtime = "scripts.run_runtime_tests:main"
ainl-runner-service = "scripts.runtime_runner_service:main"
ainl-test-profiles = "scripts.run_test_profiles:main"
ainl-check-docs = "scripts.check_docs_contracts:main"
ainl-mcp = "scripts.ainl_mcp_server:main"
ainl-install-armaraos = "tooling.armaraos_install:run_install_armaraos_main"
ainl-visualize = "scripts.visualize_ainl:main"
ainl-bridge-sizing-probe = "scripts.bridge_sizing_probe:main"
ainl-validate-s-cron = "scripts.validate_s_cron_schedules:main"

[tool.setuptools]
py-modules = [
  "compiler_v2",
  "compiler_diagnostics",
  "ainl_preprocess",
  "runtime",
  "grammar_constraint",
]

[tool.setuptools.package-data]
tooling = ["*.json", "*.yml"]

[tool.setuptools.packages.find]
where = ["."]
# Explicit roots + globs so `tooling` / `adapters` are never skipped (CLI imports `tooling.*`; runtime.compat imports `adapters`).
# OpenClaw bridge modules must be included for `ainl install openclaw` to work.
include = ["cli*", "scripts*", "tooling", "tooling.*", "adapters", "adapters.*", "runtime", "runtime.*", "intelligence", "intelligence.*", "hermes", "hermes.*", "openclaw", "openclaw.*", "armaraos", "armaraos.*"]

[tool.uv]
# Block any package version published within the last 7 days.
# Malicious takeover versions are almost always caught and yanked within hours;
# this sliding window stops short-lived compromise installs without requiring
# manual version pinning. Override for a single install:
#   uv add <pkg> --exclude-newer "0 days"
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration and not emits and not lsp' --snapshot-dirname=../snapshots/conformance"
norecursedirs = [".git", ".venv", ".venv-py310", ".venv-ci-smoke", "venv-py310", "tests/emits", "scripts"]
markers = [
  "core: stable core compiler/runtime/tooling tests",
  "integration: slower or external integration checks",
  "emits: emitter artifact checks",
  "lsp: language server checks"
]
